# DraftClaw

./: .env.example  .gitignore  .pre-commit-config.yaml  AUDIT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.new.md  PRODUCTION_CHECKLIST.md  README.md  README.new.md  docker-compose.monitoring.yml  docker-compose.yml  docker-setup.sh  fly.private.toml  fly.toml  package.json  pnpm-workspace.yaml  render.yaml  tsconfig.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md
docs/: _config.yml  bedrock.md  brave-search.md  broadcast-groups.md  date-time.md  debugging.md  docs.json  environment.md  hooks.md  index.md  logging.md  multi-agent-sandbox-tools.md  network.md  perplexity.md  pi-dev.md  pi.md  plugin.md  prose.md  scripts.md  testing.md  token-use.md  tts.md  tui.md  vps.md
monitoring/: alertmanager.yml  prometheus.yml
orchestrator/: Dockerfile  pyproject.toml
orchestrator/app/: config.py  db.py  main.py  redis_client.py
orchestrator/app/graphs/: __init__.py  odds_sync.py  pick_generation.py  result_tracking.py
orchestrator/app/ml/: __init__.py  confidence_calibrator.py  sentiment_model.py
orchestrator/app/providers/: __init__.py  base.py  sportradar.py  sportsdata.py  theodds_api.py
orchestrator/app/routes/: health.py  triggers.py
orchestrator/tests/: test_confidence_calibrator.py  test_ev_analysis.py  test_sentiment.py
scripts/: auth-monitor.sh  build-and-run-mac.sh  build_icon.sh  bundle-a2ui.sh  changelog-to-html.sh  claude-auth-status.sh  clawlog.sh  codesign-mac-app.sh  create-dmg.sh  debug-claude-usage.ts  make_appcast.sh  mobile-reauth.sh  (+25 more)
(+2392 files in other folders)
