[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "draftclaw-orchestrator"
version = "0.1.0"
description = "DraftClaw async orchestrator – LangGraph state-machine pipelines for sports betting analytics"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2.0",
    "langchain-anthropic>=0.3.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "redis[hiredis]>=5.2.0",
    "langgraph-checkpoint-redis>=0.1.0",
    "asyncpg>=0.30.0",
    "httpx>=0.28.0",
    "pydantic-settings>=2.6.0",
    "transformers>=4.46.0",
    "scikit-learn>=1.6.0",
    "pybreaker>=1.2.0",
    "joblib>=1.4.0",
]

[project.optional-dependencies]
gpu = ["torch"]
cpu = ["torch"]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
